# tracklog

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
docs/: licensing.md  technical-notes.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.nightly.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql
src-tauri/src/: backup.rs  commands.rs  fs.rs  lib.rs  main.rs  models.rs
src-tauri/src/db/: mod.rs
src/pages/: HomePage.tsx  ReleaseDetailPage.tsx  ReleasesPage.tsx  SettingsPage.tsx  TrackDetailPage.tsx  TracksPage.tsx
src/services/: tauri.ts
src/types/: models.ts
