[package]
name = "TrackLog"
version = "0.1.0"
description = "Songs catalog desktop app"
authors = ["OpenAI"]
edition = "2021"

[lib]
name = "tracklog_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
tempfile = "3.13"
walkdir = "2.5"
zip = "2.2"
