[package]
name = "TrackLog"
version = "0.1.2"
description = "Songs catalog desktop app"
authors = ["OpenAI"]
edition = "2021"
license = "GPL-3.0-only"

[lib]
name = "tracklog_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
